fix(FEC-13393): Player v7| audio player| entry info seem broken in KMC share&embed page

--- a/src/components/audio-entry-details/_audio-entry-details.scss
+++ b/src/components/audio-entry-details/_audio-entry-details.scss
@@ -1,7 +1,8 @@
 .player { 
     .audio-entry-backdrop {
         background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.7) 100%);
-        bottom: 0; 
+        bottom: 0;
+        left: 0;
         position: absolute; 
         width: 100%;
         pointer-events: none;
